@@ -1,8 +1,6 @@
 package org.hv.pocket.utils.sm4;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
+import java.util.Base64;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -46,7 +44,7 @@ public class Sm4Utils {
             Sm4 sm4 = new Sm4();
             sm4.sm4SetKeyEnc(ctx, keyBytes);
             byte[] encrypted = sm4.sm4CryptEcb(ctx, plainText.getBytes("GBK"));
-            String cipherText = new BASE64Encoder().encode(encrypted);
+            String cipherText = Base64.getEncoder().encodeToString(encrypted);
             if (cipherText != null && cipherText.trim().length() > 0) {
                 Matcher m = PATTERN.matcher(cipherText);
                 cipherText = m.replaceAll("");
@@ -73,7 +71,7 @@ public class Sm4Utils {
 
             Sm4 sm4 = new Sm4();
             sm4.sm4SetKeyDec(ctx, keyBytes);
-            byte[] decrypted = sm4.sm4CryptEcb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+            byte[] decrypted = sm4.sm4CryptEcb(ctx, Base64.getDecoder().decode(cipherText.replaceAll(" +", "+").replace("\r\n", "")));
             return new String(decrypted, "GBK");
         } catch (Exception e) {
             e.printStackTrace();
@@ -100,7 +98,7 @@ public class Sm4Utils {
             Sm4 sm4 = new Sm4();
             sm4.sm4SetKeyEnc(ctx, keyBytes);
             byte[] encrypted = sm4.sm4CryptCbc(ctx, ivBytes, plainText.getBytes("GBK"));
-            String cipherText = new BASE64Encoder().encode(encrypted);
+            String cipherText = Base64.getEncoder().encodeToString(encrypted);
             if (cipherText != null && cipherText.trim().length() > 0) {
                 Matcher m = PATTERN.matcher(cipherText);
                 cipherText = m.replaceAll("");
@@ -130,7 +128,7 @@ public class Sm4Utils {
 
             Sm4 sm4 = new Sm4();
             sm4.sm4SetKeyDec(ctx, keyBytes);
-            byte[] decrypted = sm4.sm4CryptCbc(ctx, ivBytes, new BASE64Decoder().decodeBuffer(cipherText));
+            byte[] decrypted = sm4.sm4CryptCbc(ctx, ivBytes, Base64.getDecoder().decode(cipherText.replaceAll(" +", "+").replace("\r\n", "")));
             return new String(decrypted, "GBK");
         } catch (Exception e) {
             e.printStackTrace();
